[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Doorway.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Button.gd" type="Script" id=2]
[ext_resource path="res://Materials/Mat_Platform.tres" type="Material" id=3]
[ext_resource path="res://Scenes/Impossible to collect coin.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Teleporter.tscn" type="PackedScene" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.231373, 0.419608, 0.227451, 1 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 20, 20 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.121569, 0.294118, 0.117647, 1 )

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 3 )
size = Vector2( 20, 20 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 50, 1, 50 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.7, 3, 0.7 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.992157, 1, 0.0745098, 1 )
metallic = 0.58
metallic_specular = 0.11

[node name="Level_01" type="Node"]

[node name="Doorway" type="CSGBox" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.387, 4.95299, 0 )
use_collision = true
width = 1.0
height = 10.0
depth = 10.0
script = ExtResource( 1 )

[node name="Hole" type="CSGBox" parent="Doorway"]
visible = false
operation = 2
height = 8.0
depth = 6.0

[node name="Ground" type="StaticBody" parent="."]
editor/display_folded = true

[node name="CSGMesh" type="CSGMesh" parent="Ground"]
mesh = SubResource( 2 )

[node name="CSGMesh4" type="CSGMesh" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 20 )
mesh = SubResource( 2 )

[node name="CSGMesh6" type="CSGMesh" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -20 )
mesh = SubResource( 2 )

[node name="CSGMesh12" type="CSGMesh" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -20 )
mesh = SubResource( 2 )

[node name="CSGMesh16" type="CSGMesh" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 20 )
mesh = SubResource( 2 )

[node name="CSGMesh2" type="CSGMesh" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0 )
mesh = SubResource( 4 )

[node name="CSGMesh13" type="CSGMesh" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0 )
mesh = SubResource( 4 )

[node name="CSGMesh3" type="CSGMesh" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
mesh = SubResource( 4 )

[node name="CSGMesh8" type="CSGMesh" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
mesh = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, -0.183013, 0.183013, 0, 0.707107, 0.707107, -0.258819, -0.683013, 0.683013, 0, 5.08057, -8.59462 )
shadow_enabled = true

[node name="Button" type="CSGBox" parent="."]
transform = Transform( 0.846345, 0, 0, 0, 0.221766, 0, 0, 0, 0.846344, 12.2158, 1.43822, -2.81552 )
use_collision = true
script = ExtResource( 2 )

[node name="ActivationArea" type="Area" parent="Button"]

[node name="CollisionShape" type="CollisionShape" parent="Button/ActivationArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4786, 0 )
shape = SubResource( 6 )

[node name="Platform" type="CSGBox" parent="."]
editor/display_folded = true
transform = Transform( 7.41524, 0, 0, 0, 1, 0, 0, 0, 4.58711, 17.6018, 0.410998, 0 )
use_collision = true
material = ExtResource( 3 )

[node name="PlatformRamp" type="CSGBox" parent="Platform"]
transform = Transform( 0.215584, -0.215584, 0, 0.707107, 0.707107, 0, 0, 0, 1, -1.00065, -0.410998, 0 )
material = ExtResource( 3 )

[node name="ButtonHole" type="CSGBox" parent="Platform"]
transform = Transform( 0.134857, 0, 0, 0, 1, 0, 0, 0, 0.218002, -0.726336, 1.35241, -0.613789 )
operation = 2

[node name="Impossible to collect coin" type="CSGCylinder" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 19.9839, 2.67919, 0 )
height = 0.5
sides = 16
material = SubResource( 7 )
script = ExtResource( 4 )

[node name="Teleporter" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 14 )
targetSceneName = "res://Level_02/Level_02.tscn"

[node name="Teleporter2" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -8 )
targetSceneName = "res://Level_03/Level_03.tscn"
[connection signal="button_activated" from="Button" to="Doorway" method="_on_Button_button_activated"]
[connection signal="button_deactivated" from="Button" to="Doorway" method="_on_Button_button_deactivated"]
